coquille index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>me contacter :</p>
         <ul>
           <li>3, cours du Midi (face à la gare de Perrache)</li>
-          <li>bureau des Postes & Télégraphes de Lyon-Perrache</li>
+          <li>bureau des Postes &amp; Télégraphes de Lyon-Perrache</li>
           <li>au cours d'une séance médiumnique (invoquer M. Kardec)</li>
         </ul>
         <p>langues pratiquées :</p>
